import * as fs from 'fs/promises';
import * as net from 'net';
import * as os from 'os';
import * as path from 'path';
import { getError, given, then, when } from 'test-fns';

import { getMockedAwsApiContext } from '@src/.test/getMockedAwsApiContext';
import { DeclaredAwsSsmVpcTunnel } from '@src/domain.objects/DeclaredAwsSsmVpcTunnel';

import { getOneSsmVpcTunnel } from './getOneSsmVpcTunnel';
import { getVpcTunnelHash } from './utils/getVpcTunnelHash';

describe('getOneSsmVpcTunnel', () => {
  given('no cache file exists', () => {
    when('getOneSsmVpcTunnel is called', () => {
      then('it should return CLOSED status with no pid', async () => {
        const cacheDir = path.join(os.tmpdir(), `tunnel-test-${Date.now()}`);
        await fs.mkdir(cacheDir, { recursive: true });

        const tunnelRef = {
          account: '123456789012',
          region: 'us-east-1',
          via: {
            mechanism: 'aws.ssm' as const,
            bastion: { exid: 'test-bastion' },
          },
          into: { cluster: { name: 'test-db' } },
          from: { host: 'localhost', port: 19876 },
        };

        const result = await getOneSsmVpcTunnel(
          { by: { unique: tunnelRef } },
          getMockedAwsApiContext({ cacheDir }),
        );

        expect(result.status).toBe('CLOSED');
        expect(result.pid).toBeNull();
        expect(result).toMatchSnapshot();

        await fs.rm(cacheDir, { recursive: true });
      });
    });
  });

  given('a cache file with dead process', () => {
    when('getOneSsmVpcTunnel is called', () => {
      then('it should return CLOSED status', async () => {
        const cacheDir = path.join(os.tmpdir(), `tunnel-test-${Date.now()}`);
        await fs.mkdir(cacheDir, { recursive: true });

        const tunnelRef = {
          account: '123456789012',
          region: 'us-east-1',
          via: {
            mechanism: 'aws.ssm' as const,
            bastion: { exid: 'test-bastion-dead' },
          },
          into: { cluster: { name: 'test-db-dead' } },
          from: { host: 'localhost', port: 19879 },
        };

        // write cache file with invalid pid
        const context = getMockedAwsApiContext({ cacheDir });
        const hash = getVpcTunnelHash({ for: { tunnel: tunnelRef } });
        const cacheFilePath = path.join(cacheDir, `${hash}.json`);
        await fs.writeFile(
          cacheFilePath,
          JSON.stringify({ pid: 999999999, tunnel: tunnelRef }),
        );

        const result = await getOneSsmVpcTunnel(
          { by: { unique: tunnelRef } },
          context,
        );

        expect(result.status).toBe('CLOSED');
        expect(result).toMatchSnapshot();

        await fs.rm(cacheDir, { recursive: true });
      });
    });
  });

  given('a cache file with alive process but unhealthy tunnel', () => {
    when('getOneSsmVpcTunnel is called', () => {
      then('it should return CLOSED status with pid', async () => {
        const cacheDir = path.join(os.tmpdir(), `tunnel-test-${Date.now()}`);
        await fs.mkdir(cacheDir, { recursive: true });

        // use a port that is not bound (unhealthy)
        const tunnelRef = {
          account: '123456789012',
          region: 'us-east-1',
          via: {
            mechanism: 'aws.ssm' as const,
            bastion: { exid: 'test-bastion-unhealthy' },
          },
          into: { cluster: { name: 'test-db-unhealthy' } },
          from: { host: 'localhost', port: 19880 },
        };

        // write cache with current process pid (alive) but port not bound (unhealthy)
        const context = getMockedAwsApiContext({ cacheDir });
        const hash = getVpcTunnelHash({ for: { tunnel: tunnelRef } });
        const cacheFilePath = path.join(cacheDir, `${hash}.json`);
        await fs.writeFile(
          cacheFilePath,
          JSON.stringify({ pid: process.pid, tunnel: tunnelRef }),
        );

        const result = await getOneSsmVpcTunnel(
          { by: { unique: tunnelRef } },
          context,
        );

        expect(result.status).toBe('CLOSED');
        expect(result.pid).toBeNull();
        expect(result).toMatchSnapshot();

        await fs.rm(cacheDir, { recursive: true });
      });
    });
  });

  given('a cache file with alive process and healthy tunnel', () => {
    when('getOneSsmVpcTunnel is called', () => {
      then('it should return OPEN status with pid', async () => {
        const cacheDir = path.join(os.tmpdir(), `tunnel-test-${Date.now()}`);
        await fs.mkdir(cacheDir, { recursive: true });

        // start a server to make port healthy
        const server = net.createServer();
        await new Promise<void>((resolve) => {
          server.listen(19881, '127.0.0.1', () => resolve());
        });

        const tunnelRef = {
          account: '123456789012',
          region: 'us-east-1',
          via: {
            mechanism: 'aws.ssm' as const,
            bastion: { exid: 'test-bastion-healthy' },
          },
          into: { cluster: { name: 'test-db-healthy' } },
          from: { host: 'localhost', port: 19881 },
        };

        const context = getMockedAwsApiContext({ cacheDir });
        const hash = getVpcTunnelHash({ for: { tunnel: tunnelRef } });
        const cacheFilePath = path.join(cacheDir, `${hash}.json`);
        await fs.writeFile(
          cacheFilePath,
          JSON.stringify({ pid: process.pid, tunnel: tunnelRef }),
        );

        const result = await getOneSsmVpcTunnel(
          { by: { unique: tunnelRef } },
          context,
        );

        expect(result.status).toBe('OPEN');
        expect(result.pid).toBe(process.pid);
        // snapshot masks dynamic pid with null to maintain domain object format
        expect(
          new DeclaredAwsSsmVpcTunnel({ ...result, pid: null }),
        ).toMatchSnapshot();

        server.close();
        await fs.rm(cacheDir, { recursive: true });
      });
    });
  });

  given('negative path: corrupted cache file', () => {
    when('cache file contains invalid JSON', () => {
      then('it should throw parse error', async () => {
        const cacheDir = path.join(os.tmpdir(), `tunnel-test-${Date.now()}`);
        await fs.mkdir(cacheDir, { recursive: true });

        const tunnelRef = {
          account: '123456789012',
          region: 'us-east-1',
          via: {
            mechanism: 'aws.ssm' as const,
            bastion: { exid: 'test-bastion-corrupted' },
          },
          into: { cluster: { name: 'test-db-corrupted' } },
          from: { host: 'localhost', port: 19882 },
        };

        // write corrupted cache file
        const context = getMockedAwsApiContext({ cacheDir });
        const hash = getVpcTunnelHash({ for: { tunnel: tunnelRef } });
        const cacheFilePath = path.join(cacheDir, `${hash}.json`);
        await fs.writeFile(cacheFilePath, 'not valid json {{{');

        const error = await getError(
          getOneSsmVpcTunnel({ by: { unique: tunnelRef } }, context),
        );

        expect(error).toBeInstanceOf(SyntaxError);
        expect(error.message).toContain('JSON');

        await fs.rm(cacheDir, { recursive: true });
      });
    });
  });
});
