// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getOneSsmVpcTunnel given: a cache file with alive process and healthy tunnel when: getOneSsmVpcTunnel is called then: it should return OPEN status with pid 1`] = `
DeclaredAwsSsmVpcTunnel {
  "account": "123456789012",
  "from": DeclaredAwsSsmVpcTunnelFrom {
    "host": "localhost",
    "port": 19881,
  },
  "into": DeclaredAwsSsmVpcTunnelInto {
    "cluster": RefByUnique {
      "name": "test-db-healthy",
    },
  },
  "pid": null,
  "region": "us-east-1",
  "status": "OPEN",
  "via": DeclaredAwsSsmVpcTunnelVia {
    "bastion": RefByUnique {
      "exid": "test-bastion-healthy",
    },
    "mechanism": "aws.ssm",
  },
}
`;

exports[`getOneSsmVpcTunnel given: a cache file with alive process but unhealthy tunnel when: getOneSsmVpcTunnel is called then: it should return CLOSED status with pid 1`] = `
DeclaredAwsSsmVpcTunnel {
  "account": "123456789012",
  "from": DeclaredAwsSsmVpcTunnelFrom {
    "host": "localhost",
    "port": 19880,
  },
  "into": DeclaredAwsSsmVpcTunnelInto {
    "cluster": RefByUnique {
      "name": "test-db-unhealthy",
    },
  },
  "pid": null,
  "region": "us-east-1",
  "status": "CLOSED",
  "via": DeclaredAwsSsmVpcTunnelVia {
    "bastion": RefByUnique {
      "exid": "test-bastion-unhealthy",
    },
    "mechanism": "aws.ssm",
  },
}
`;

exports[`getOneSsmVpcTunnel given: a cache file with dead process when: getOneSsmVpcTunnel is called then: it should return CLOSED status 1`] = `
DeclaredAwsSsmVpcTunnel {
  "account": "123456789012",
  "from": DeclaredAwsSsmVpcTunnelFrom {
    "host": "localhost",
    "port": 19879,
  },
  "into": DeclaredAwsSsmVpcTunnelInto {
    "cluster": RefByUnique {
      "name": "test-db-dead",
    },
  },
  "pid": null,
  "region": "us-east-1",
  "status": "CLOSED",
  "via": DeclaredAwsSsmVpcTunnelVia {
    "bastion": RefByUnique {
      "exid": "test-bastion-dead",
    },
    "mechanism": "aws.ssm",
  },
}
`;

exports[`getOneSsmVpcTunnel given: no cache file exists when: getOneSsmVpcTunnel is called then: it should return CLOSED status with no pid 1`] = `
DeclaredAwsSsmVpcTunnel {
  "account": "123456789012",
  "from": DeclaredAwsSsmVpcTunnelFrom {
    "host": "localhost",
    "port": 19876,
  },
  "into": DeclaredAwsSsmVpcTunnelInto {
    "cluster": RefByUnique {
      "name": "test-db",
    },
  },
  "pid": null,
  "region": "us-east-1",
  "status": "CLOSED",
  "via": DeclaredAwsSsmVpcTunnelVia {
    "bastion": RefByUnique {
      "exid": "test-bastion",
    },
    "mechanism": "aws.ssm",
  },
}
`;
